web-infras/parser/tests/fixtures/esprima/ES6/generator/invalid-labelled-generator/output.txt
[SyntaxError]: Generator functions can only be declared at the top level or inside a block. (1,4)
1|a: function *g() {}
 |  ^
